--- a/solutions/CSS Battle (#11 Pastel Logo).html
+++ b/solutions/CSS Battle (#11 Pastel Logo).html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>CSS Battle (#55 - Windmill)</title>
+        <title>CSS Battle (#11 Pastel Logo)</title>
 
         <style>
             body {
